@@ -4,7 +4,10 @@ Released 2.3.9 2009-xx-xx
 Changes since 2.3.8:
 
 Lib/
-* 
+* Non-exported function ldif.needs_base64() was abandoned and is now
+  implemented as method LDIFWriter._needs_base64(). This allows sub-classes
+  of LDIFWriter to implement determining whether attribute values have
+  to be base64-encoded in a different manner.
 
 Modules/
 * New LDAP option constant ldap.OPT_X_SASL_NOCANON supported
